# internal/server/http.go
@@ -18,7 +18,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, eas *service.EasService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, eas *service.EasService, easSalesPaper *service.EasSalesPaperService, logger log.Logger) *http.Server {
 	serviceName := env.GetServiceName()
 	var opts = []http.ServerOption{
 		http.Filter(middleware.CORS(), ilog.LoggingHandler(serviceName, ilog.WithAccessLog())),
@@ -43,6 +43,7 @@ func NewHTTPServer(c *conf.Server, eas *service.EasService, logger log.Logger) *
 	}
 	srv := http.NewServer(opts...)
 	v1.RegisterEasServiceHTTPServer(srv, eas)
+	v1.RegisterEasSalesPaperServiceHTTPServer(srv, easSalesPaper)
 	openAPIHandler := openapiv2.NewHandler(openapiv2.WithGeneratorOptions(
 		generator.UseJSONNamesForFields(false),
 		generator.EnumsAsInts(true),
